--- a/MigratorNeo4j/MigratorNeo4j.csproj
+++ b/MigratorNeo4j/MigratorNeo4j.csproj
@@ -75,7 +75,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
-      <Private>True</Private>
+      <Private>False</Private>
     </Reference>
     <Reference Include="System.Data.SQLite">
       <HintPath>..\Referenced Assemblies\System.Data.SQLite.DLL</HintPath>
